Multiple changes on explainability service