@@ -4,9 +4,25 @@ import gr.imsi.athenarc.xtremexpvisapi.domain.experiment.Run;
 import gr.imsi.athenarc.xtremexpvisapi.domain.experiment.Param;
 import gr.imsi.athenarc.xtremexpvisapi.service.ExperimentService;
 import gr.imsi.athenarc.xtremexpvisapi.service.ExperimentServiceFactory;
+import gr.imsi.athenarc.xtremexpvisapi.service.shared.MlAnalysisResourceHelper;
+import lombok.extern.java.Log;
+
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.google.protobuf.InvalidProtocolBufferException;
+import com.google.protobuf.util.JsonFormat;
+
+import explainabilityService.DataPaths;
+import explainabilityService.ExplanationsRequest;
+import explainabilityService.HyperparameterList;
+import explainabilityService.Hyperparameters;
+
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -22,11 +38,17 @@ import java.util.stream.Collectors;
  * same set of parameter keys, regardless of the values used.
  */
 @Component
+@Log
 public class ExplainabilityRunHelper {
 
     private final ExperimentServiceFactory experimentServiceFactory;
+    private final MlAnalysisResourceHelper mlAnalysisResourceHelper;
+    @Value("${app.mock.ml-evaluation.path:}")
+    private String mockEvaluationPath;
 
-    public ExplainabilityRunHelper(ExperimentServiceFactory experimentServiceFactory) {
+    public ExplainabilityRunHelper(ExperimentServiceFactory experimentServiceFactory,
+            MlAnalysisResourceHelper mlAnalysisResourceHelper) {
+        this.mlAnalysisResourceHelper = mlAnalysisResourceHelper;
         this.experimentServiceFactory = experimentServiceFactory;
     }
 
@@ -43,9 +65,10 @@ public class ExplainabilityRunHelper {
     public List<Run> findSimilarRuns(Run referenceRun) {
         Set<String> referenceKeys = getParamNames(referenceRun);
 
-        if (referenceKeys.isEmpty()) {
-            return Collections.emptyList();
-        }
+        // if (referenceKeys.isEmpty()) {
+        // log.info("No parameters found for reference run: " + referenceRun.getId());
+        // return Collections.emptyList();
+        // }
 
         ExperimentService service = experimentServiceFactory.getActiveService();
         ResponseEntity<List<Run>> response = service.getRunsForExperiment(referenceRun.getExperimentId());
@@ -62,10 +85,123 @@ public class ExplainabilityRunHelper {
     }
 
     private Set<String> getParamNames(Run run) {
-        if (run.getParams() == null)
-            return Set.of();
-        return run.getParams().stream()
+        if (run.getParams() == null) {
+            log.info("Parameters list is null");
+            return Collections.emptySet();
+        }
+
+        Set<String> paramNames = run.getParams().stream()
                 .map(Param::getName)
+                .filter(Objects::nonNull) // Filter out any null names
                 .collect(Collectors.toSet());
+        log.info("Parameter names: " + paramNames);
+
+        return paramNames;
+    }
+
+    public ExplanationsRequest requestBuilder(String explainabilityRequest, String experimentId, String runId)
+            throws JsonProcessingException, InvalidProtocolBufferException {
+
+        // Parse the JSON request into a Protobuf object
+        ExplanationsRequest.Builder requestBuilder = ExplanationsRequest.newBuilder();
+        JsonFormat.parser().merge(explainabilityRequest, requestBuilder);
+
+        if (requestBuilder.getExplanationType().equals("featureExplanation")) {
+
+            // Create a DataPaths object from the loaded data paths
+            Optional<Map<String, Path>> dataPaths = loadExplainabilityDataPaths(experimentId, runId);
+            if (dataPaths.isEmpty()) {
+                throw new IllegalArgumentException("No data paths found for experimentId this experiment");
+            }
+            DataPaths.Builder dataPathsBuilder = DataPaths.newBuilder();
+            dataPathsBuilder.setXTest(dataPaths.get().get("X_test").toString());
+            dataPathsBuilder.setXTrain(dataPaths.get().get("X_train").toString());
+            dataPathsBuilder.setYTest(dataPaths.get().get("Y_test").toString());
+            dataPathsBuilder.setYTrain(dataPaths.get().get("Y_train").toString());
+            dataPathsBuilder.setYPred(dataPaths.get().get("Y_pred").toString());
+            DataPaths data = dataPathsBuilder.build();
+            requestBuilder.setData(data);
+
+            // Add the model path to the request
+            List<String> model = new ArrayList<>();
+            model.add(dataPaths.get().get("model1").toString());
+            requestBuilder.addAllModel(model);
+
+        } else if (requestBuilder.getExplanationType().equals("hyperparameterExplanation")) {
+            ExperimentService service = experimentServiceFactory.getActiveService();
+            ResponseEntity<Run> response = service.getRunById(experimentId, runId);
+            Run run = response.getBody();
+            List<Run> similarRuns = findSimilarRuns(run);
+            log.info("Similar runs: " + similarRuns.size());
+            //TODO: Remove this counter when the number of models is not fixed to 3
+            int counter = 1;
+            for (Run similarRun : similarRuns) {
+                if (counter > 3) {
+                    break;
+                }
+                Optional<Map<String, Path>> dataPaths = loadExplainabilityDataPaths(similarRun.getExperimentId(),
+                        similarRun.getId());
+                String modelPath = dataPaths.get().get("model" + counter).toString();
+                Hyperparameters.Builder hyperparametersBuilder = Hyperparameters.newBuilder();
+                hyperparametersBuilder.setMetricValue((float) run.getMetrics().get(0).getValue());
+
+                List<Param> params = similarRun.getParams();
+                for (Param param : params) {
+                    // Create a new builder for each parameter
+                    HyperparameterList.Builder hyperparameterListBuilder = HyperparameterList.newBuilder();
+                    hyperparameterListBuilder.setValues(param.getValue());
+                    try {
+                        Double.parseDouble(param.getValue());
+                        hyperparameterListBuilder.setType("numeric");
+                    } catch (NumberFormatException e) {
+                        hyperparameterListBuilder.setType("categorical");
+                    }
+                    HyperparameterList hyperparameterList = hyperparameterListBuilder.build();
+                    hyperparametersBuilder.putHyperparameter(param.getName(), hyperparameterList);
+                }
+
+                Hyperparameters hyperparameters = hyperparametersBuilder.build();
+                requestBuilder.putHyperConfigs(modelPath, hyperparameters);
+                counter++;
+            }
+        } else {
+            throw new IllegalArgumentException("Invalid explanation type: " + requestBuilder.getExplanationType());
+        }
+        return requestBuilder.build();
+    }
+
+    @Cacheable(value = "explainabilityDataPaths", key = "#experimentId + '::' + #runId")
+    public Optional<Map<String, Path>> loadExplainabilityDataPaths(String experimentId, String runId) {
+        log.info("Loading evaluation data for experimentId: " + experimentId + ", runId: " + runId);
+        ExperimentService service = experimentServiceFactory.getActiveService();
+        ResponseEntity<Run> response = service.getRunById(experimentId, runId);
+        if (!response.getStatusCode().is2xxSuccessful() || response.getBody() == null) {
+            return Optional.empty();
+        }
+
+        Run run = response.getBody();
+        Optional<Path> folderOpt = mlAnalysisResourceHelper.getMlResourceFolder(run);
+        log.info(" folderOpt: " + folderOpt);
+        // Fallback to mock path if no folder found and mock path is configured
+        if (folderOpt.isEmpty() && !mockEvaluationPath.isBlank()) {
+            log.warning("No analysis folder found in run metadata. Falling back to mock path: " +
+                    mockEvaluationPath);
+            folderOpt = Optional.of(Paths.get(mockEvaluationPath));
+        }
+        if (folderOpt.isEmpty())
+            return Optional.empty();
+
+        Path folder = folderOpt.get();
+
+        if (!mlAnalysisResourceHelper.hasRequiredFiles(folder)) {
+            log.warning("Analysis folder exists but is missing one or more required files.");
+            return Optional.empty();
+        }
+
+        if (mlAnalysisResourceHelper.getRequiredFilePaths(folder).isEmpty()) {
+            return Optional.empty();
+        } else {
+            return Optional.of(mlAnalysisResourceHelper.getRequiredFilePaths(folder));
+        }
     }
 }
